--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,26 +1,23 @@
-name: Java CI with Maven
+name: project cicd flow
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v1
         with:
           java-version: '21'
-          distribution: 'temurin'
+          distribution: 'adopt'
           cache: maven
-
       - name: Build with Maven
         run: mvn clean install
-
-
-      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot's analysis
-
-        uses: advanced-security/maven-dependency-submission-action@v1
