--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,10 +27,10 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to Docker Hub
-        uses: mr-smithers-excellent/docker-build-push@v6
+        uses: docker/login-action@v2
         with:
             image: samahmn98/gymapp-images
-            registry: docker-compose
+            registry: docker.io
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
 
