--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: project cicd flow
+name: Java CI with Maven
 
 on:
   push:
@@ -8,36 +8,32 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 21
-        uses: actions/setup-java@v1
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
         with:
           java-version: '21'
           distribution: 'adopt'
-          cache: maven
+
       - name: Build with Maven
         run: mvn clean install
-
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-
-            registry: docker.io
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
       - name: Build and push images
         run: |
-                docker-compose -f docker-compose.yml build
-                docker-compose -f docker-compose.yml push
+          docker-compose -f docker-compose.yml build
+          docker-compose -f docker-compose.yml push
