--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
             image: samahmn/gymapp-images
             tags: latest
             registry: docker.io
-            dockerfile: Dockerfile
+            dockerfile: docker-compose
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
 
