--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,4 +24,70 @@ jobs:
         run: mvn clean install
       - name: Run unit tests
         run: mvn test
+  release:
+    needs: build
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '21'
+          distribution: 'adopt'
+
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v1.0.0
+          release_name: Release v1.0.0
+          draft: false
+          prerelease: false
+
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: target/my-app.jar
+          asset_name: my-app.jar
+          asset_content_type: application/java-archive
+
+  deploy:
+      needs: release
+      runs-on: ubuntu-latest
+
+      steps:
+        - name: Check out code
+          uses: actions/checkout@v2
+
+        - name: Set up JDK
+          uses: actions/setup-java@v2
+          with:
+            java-version: '21'
+            distribution: 'adopt'
+
+        - name: Log in to Docker Hub
+          run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+        - name: Build Docker image
+          run: docker build -t my-app:${{ github.sha }} .
+
+        - name: Push Docker image
+          run: docker push my-app:${{ github.sha }}
+
+        - name: Update Kubernetes manifests
+          run: |
+            kubectl set image deployment/my-app my-app=my-app:${{ github.sha }}
+
+        - name: Deploy to AWS EKS
+          uses: aws-actions/amazon-eks-update-kubeconfig@v1
+          with:
+            aws-region: us-west-2
+            cluster-name: my-cluster
