--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,23 +25,41 @@ jobs:
       - name: Run unit tests
         run: mvn test
   release:
+    name: Release project
     needs: build
     runs-on: ubuntu-latest
 
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: static-site
+      - name: Archive site content
+        uses: thedoctor0/zip-release@master
+        with:
+          filename: site.zip
       - name: Check out code
         uses: actions/checkout@v2
 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           tag_name: v1.0.0
           release_name: Release v1.0.0
           draft: false
           prerelease: false
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+            GITHUB_TOKEN: ${{ secrets.PAT }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./site.zip
+          asset_name: site-v1.0.0.zip
+          asset_content_type: application/zip
 
   deploy:
       needs: release
