--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,34 +44,36 @@ jobs:
           draft: false
 
   deploy:
-      needs: release
-      runs-on: ubuntu-latest
+    needs: release
+    runs-on: ubuntu-latest
 
-      steps:
-        - name: Check out code
-          uses: actions/checkout@v2
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
 
-        - name: Set up JDK
-          uses: actions/setup-java@v2
-          with:
-            java-version: '21'
-            distribution: 'adopt'
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '21'
+          distribution: 'adopt'
 
-        - name: Log in to Docker Hub
-          run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-        - name: Build Docker image
-          run: docker build -t my-app:${{ github.sha }} .
+      - name: Build Docker image
+        run: docker build -t my-app:${{ github.sha }} .
 
-        - name: Push Docker image
-          run: docker push my-app:${{ github.sha }}
+      - name: Push Docker image
+        run: docker push my-app:${{ github.sha }}
 
-        - name: Update Kubernetes manifests
-          run: |
-            kubectl set image deployment/my-app my-app=my-app:${{ github.sha }}
+      - name: Start Minikube
+        run: |
+          minikube start --driver=docker
 
-        - name: Deploy to AWS EKS
-          uses: aws-actions/amazon-eks-update-kubeconfig@v1
-          with:
-            aws-region: us-west-2
-            cluster-name: my-cluster
+      - name: Update Kubernetes context
+        run: |
+          kubectl config use-context minikube
+
+      - name: Update Kubernetes manifests
+        run: |
+          kubectl set image deployment/my-app my-app=my-app:${{ github.sha }}
