--- a/members/members/Dockerfile
+++ b/members/members/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:21
-
-COPY target/*.jar app.jar
-
-ENTRYPOINT ["java", "-jar","/app.jar"]
+EXPOSE 8080
+COPY members/members/target/members-0.0.1-SNAPSHOT.jar members.jar
+ENTRYPOINT ["java", "-jar", "/members.jar"]
