--- a/member-class/member-class/Dockerfile
+++ b/member-class/member-class/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:21
-
-COPY target/*.jar app.jar
-
-ENTRYPOINT ["java", "-jar","/app.jar"]
+EXPOSE 8080
+COPY member-class/member-class/target/member-class-0.0.1-SNAPSHOT.jar member-class.jar
+ENTRYPOINT ["java", "-jar", "/member-class.jar"]
