--- a/membership/membership/Dockerfile
+++ b/membership/membership/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:21
-
-COPY target/*.jar app.jar
-
-ENTRYPOINT ["java", "-jar","/app.jar"]
+EXPOSE 8080
+COPY membership/membership/target/membership-0.0.1-SNAPSHOT.jar membership.jar
+ENTRYPOINT ["java", "-jar", "/membership.jar"]
