--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.example</groupId>
     <artifactId>development-platform-sa123-master</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging> <!-- Parent POM should be 'pom' -->
 
     <modules>
         <module>cloud-gateway/cloud-gateway</module>
@@ -23,5 +24,23 @@
         </repository>
     </distributionManagement>
 
+    <build>
+        <pluginManagement> <!-- Use pluginManagement for shared plugins -->
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.2.0</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                                <mainClass>com.example.MainClass</mainClass> <!-- Replace with your main class -->
+                            </manifest>
+                        </archive>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
-
