--- a/service-registry/service-registry/Dockerfile
+++ b/service-registry/service-registry/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:21
-
-COPY target/*.jar app.jar
-
-ENTRYPOINT ["java", "-jar","/app.jar"]
+EXPOSE 8080
+COPY service-registry/service-registry/target/service-registry-0.0.1-SNAPSHOT.jar service-registry.jar
+ENTRYPOINT ["java", "-jar", "/service-registry.jar"]
