--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   cloud-gateway:
     build:
       context: ./cloud-gateway/cloud-gateway
-      dockerfile: cloud-gateway/Dockerfile
+      dockerfile: Dockerfile
     image: cloud-gateway:latest
     ports:
       - "8091:8091"
