--- a/cloud-gateway/cloud-gateway/pom.xml
+++ b/cloud-gateway/cloud-gateway/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>cloud-gateway</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>cloud-gateway</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
